kind_latest/istio-manifests/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ai-sre-gateway-controller
spec:
  selector:
    app: dashboard
  servers:
  - port:
      number: 8501
      name: HTTP
      protocol: HTTP
    hosts:
    - ghost.vision.ai
